--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
 body,h1,h2,h3 {
   margin: 0;
   padding: 0;
+
 }
 
 :root {
@@ -26,13 +27,14 @@ body,h1,h2,h3 {
   --button-color: #5732F9;
   --secondary-text: white;
   --sub-text:rgb(131, 128, 128);
+  --hover : #DDE2EE
 }
 
 /* Login & Signup */
 .logo-image {
   width: 180px;
   height: 60px;
-
+ 
 }
 
 .login-form, .create-account, .form-control, .form-group{
@@ -46,11 +48,6 @@ body,h1,h2,h3 {
   margin-left: 3rem;
 }
 
-.signup {
-  max-width: 400px;
-  margin: 2rem auto ;
-}
-
 label {
   font-size: 0.8rem;
   font-weight:600;
@@ -62,7 +59,7 @@ input {
   font-size: 0.65rem;
   padding: 0.62rem 4.3rem 0.62rem 0.6rem ;
   border: 1px solid var(--placeholder-color);
-   border-radius: 0.25rem;
+  border-radius: 0.25rem;
   text-align: left;
   margin-bottom: 0.8rem;
 }
@@ -88,12 +85,17 @@ button {
   color: var(--secondary-text);
   text-transform: uppercase;
   cursor: pointer;
- 
+  width: 100%;
+}
+
+.signup-form button {
+  width: 50%;
+  text-transform: capitalize;
+  padding: 0.9rem 2rem;
 }
 
 p {
   font-size: 0.7rem;
-  text-align: center;
   color: var(--sub-text);
   font-weight: 700;
 }
@@ -123,22 +125,39 @@ a {
 
 /* Create account */
 
+.signup-form {
+  max-width: 400px;
+  margin: 2rem auto ;
+  display: flex;
+  flex-direction: column;
+  
+}
+
+.user-signup {
+  width: 100%;
+}
 
 .create-account {
   margin-top: 4rem;
 }
-.create-user, .create-provider {
-  display: flex;
-  flex-direction: column;
-  border: 1px solid var(--placeholder-color);
-  border-radius: 1rem;
-  padding: 0.5rem 0.5rem 0.5rem 2rem; 
-  margin-top: 1rem;
-  cursor: pointer;
+ .create-profile {
+ display: flex;
+ gap: 1rem;
+
 }
 
-.create-user:hover, .create-provider:hover  {
-  border: 2px solid var(--button-color) ;
+.create-profile div {
+  border: 1px solid var(--button-color);
+  border-radius: 0.4rem;
+  padding: 0.5rem 2rem; 
+  margin-top: 0.2rem;
+  cursor: pointer;
+
+}
+
+.create-profile div:hover {
+  background-color: var(--hover);
+  color: var(--button-color);
 }
 
 #create-btn {
@@ -150,9 +169,8 @@ h2 {
   font-size: 1.2rem;
 }
 h3 {
-  font-size: 0.9rem;
-  margin-bottom: 0.3rem;
- 
+  font-size: 0.7rem;
+   margin-bottom: 0.3rem;
 }
 
 h1 {
