--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@ body,h1,h2,h3 {
 
 }
 
-:root {
+/* :root {
   font-family: Raleway;
   line-height: 1.5;
   font-weight: 400;
@@ -28,14 +28,13 @@ body,h1,h2,h3 {
   --secondary-text: white;
   --sub-text:rgb(131, 128, 128);
   --hover : #DDE2EE
-}
+} */
 
 /* Login & Signup */
 
 .login-form, .form-control,.create-account, .form-group{
   display: flex;
   flex-direction: column;
-  
   
 }
 
@@ -44,31 +43,31 @@ body,h1,h2,h3 {
   margin-left: 3rem;
 }
 
-label {
+/* label {
   font-size: 0.8rem;
   font-weight:600;
   margin: 0.5rem 0.2rem;
   
-}
+} */
 
-input {
+/* input {
   font-size: 0.65rem;
   padding: 0.62rem 4.3rem 0.62rem 0.6rem ;
   border: 1px solid var(--placeholder-color);
   border-radius: 0.25rem;
   text-align: left;
   margin-bottom: 0.8rem;
-}
+} */
 
-::placeholder {
+/* ::placeholder {
   color: var(--placeholder-color);
-}
+} */
 
-h1 {
+/* h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
-
+} */
+/* 
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -82,23 +81,23 @@ button {
   text-transform: uppercase;
   cursor: pointer;
   width: 100%;
-}
+} */
 
 .signup-form button {
   width: 50%;
   text-transform: capitalize;
   padding: 0.9rem 2rem;
 }
-
+/* 
 p {
   font-size: 0.7rem;
   color: var(--sub-text);
   font-weight: 700;
-}
-a {
+} */
+/* a {
   color:var(--button-color);
   cursor: pointer;
-}
+} */
 
 .terms {
   font-size: 0.5rem;
@@ -106,12 +105,12 @@ a {
   margin-left: 1rem;
 }
 
-.forgot-password {
+/* .forgot-password {
   font-size: 0.7rem;
   font-weight: 700;
   text-decoration: underline;
   text-align: right;
-}
+} */
 
 .error {
   color:red;
@@ -161,7 +160,7 @@ width: 100%;
 }
 
 
-h2 {
+/* h2 {
   font-size: 1.2rem;
 }
 h3 {
@@ -174,7 +173,7 @@ h1 {
   color: var(--sub-text);
   font-weight: 500;
   
-}
+} */
 
 img {
   display: inline-block;
