--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 
 
 /*preset*/
-/* 
+
 * {
   box-sizing: border-box;
   text-rendering: optimizeLegibility;
@@ -12,20 +12,73 @@
   font-kerning: auto;
 }
 
-body,h1,h2,h3 {
+body,h1,h2,h3,h4,p {
   margin: 0;
   padding: 0;
-
 }
 
+/* Typography */
+
 :root {
- 
   --placeholder-color: #CED3DF;
   --button-color: #5732F9;
   --secondary-text: white;
   --sub-text:rgb(131, 128, 128);
-  --hover : #DDE2EE
-} */
+  --hover : #DDE2EE;
+  font-family: 'Raleway', sans-serif;
+}
+
+ button {
+  text-transform: uppercase;
+  padding: 0.9rem 2rem;
+  border: none;
+  border-radius: 7px;
+  background-color: var(--button-color);
+  color: whitesmoke;
+  font-weight: bold;
+  font-size: 0.9rem;
+  cursor: pointer;
+}
+
+input, select {
+  font-size: 1rem;
+  padding: 0.8rem 4.3rem 0.6rem 0.6rem ;
+  border: 2px solid var(--placeholder-color);
+  border-radius: 0.25rem;
+  text-align: left;
+  margin-bottom: 0.2rem;
+ 
+} 
+h1 {
+  font-size: 1.5rem;
+  font-weight: 600;
+  
+}
+h2 {
+  font-size: 1.2rem;
+}
+/* tags with links*/
+h3 {
+  font-size: 0.9rem;
+  margin-top: 0.8rem;
+}
+
+h4 {
+  font-size: 0.9rem;
+  font-weight: 500;
+  margin: 0.5rem 0;
+}
+
+
+p {
+  font-size: 0.8rem;
+}
+
+/* login-form, signup-form, create-account */
+.form-control {
+  display: flex;
+  flex-direction: column;
+}
 
 /* Login & Signup */
 /* .logo-image {
@@ -46,22 +99,9 @@ body,h1,h2,h3 {
 } */
 
 
-/* 
-input {
-  font-size: 0.65rem;
-  padding: 0.62rem 4.3rem 0.62rem 0.6rem ;
-  border: 1px solid var(--placeholder-color);
-  border-radius: 0.25rem;
-  text-align: left;
-  margin-bottom: 0.8rem;
-} */
 
 
-/* .signup-form button {
-  width: 50%;
-  text-transform: capitalize;
-  padding: 0.9rem 2rem;
-} */
+
 /* 
 .terms {
   font-size: 0.5rem;
