--- a/src/styles/create-account.css
+++ b/src/styles/create-account.css
@@ -1,11 +1,12 @@
-.form {
+.create-form {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+
 }
 
 .select-type {
     display: flex;
+    gap: 10px;
 }
