--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,6 +1,4 @@
 
-@import 'index.css';
-
 .login-form {
     display: flex;
     flex-direction: column;
@@ -8,12 +6,16 @@
     max-width: 700px;
     width: 25%;
     margin: 3rem 5rem auto auto;
-
 }
 
-p >.forgot-password {
+p > .forgot-password {
     float: right;
     font-weight: bold;
+    margin: 0.5rem auto;
+}
+
+.form-control {
+    margin-top: 0.5rem;
 }
 
 #btn {
