--- a/index.css
+++ b/index.css
@@ -31,6 +31,7 @@ body,h1,h2,h3 {
   --navbar: #FEF7F2;
 }
 
+
 /* Login & Signup */
 
 .login-form, .form-control,.create-account, .form-group{
@@ -44,7 +45,7 @@ body,h1,h2,h3 {
   margin-left: 3rem;
 }
 
-/* label {
+/* /* label {
   font-size: 0.8rem;
   font-weight:600;
   margin: 0.5rem 0.2rem;
@@ -84,11 +85,12 @@ button {
   width: 100%;
 } */
 
-.signup-form button {
+/* .signup-form button {
   width: 50%;
   text-transform: capitalize;
-  padding: 0.9rem 2rem;
+  padding: 0.9rem 2rem; 
 }
+
 /* 
 p {
   font-size: 0.7rem;
@@ -100,11 +102,11 @@ p {
   cursor: pointer;
 } */
 
-.terms {
+/* .terms {
   font-size: 0.5rem;
   margin-bottom: 1rem;
   margin-left: 1rem;
-}
+} */
 
 /* .forgot-password {
   font-size: 0.7rem;
@@ -113,14 +115,14 @@ p {
   text-align: right;
 } */
 
-.error {
+/* .error {
   color:red;
   font-size: 0.7rem;
   font-weight: 600;
-}
+} */
 
 /* Create account */
-
+/* 
 .signup-form {
   max-width: 400px;
   margin: 2rem auto ;
@@ -158,7 +160,7 @@ p {
 
 #create-btn {
 width: 100%;
-}
+} */
 
 
 /* h2 {
@@ -176,7 +178,7 @@ h1 {
   
 } */
 
-img {
+/* img {
   display: inline-block;
 }
-
+ */ 
