--- a/src/styles/Signup.css
+++ b/src/styles/Signup.css
@@ -11,3 +11,10 @@
     font-size: 0.8rem;
     margin-bottom: 0.3rem;
 }
+
+:-webkit-autofill,
+  :-webkit-autofill:hover, 
+  :-webkit-autofill:focus,
+  :-webkit-autofill:active {
+      -webkit-box-shadow: 0 0 0 30px white inset !important;
+  }
