--- a/src/styles/provider-signup.css
+++ b/src/styles/provider-signup.css
@@ -1,6 +1,6 @@
 
-
-.provider-form {
+@media (min-width:800px) {
+  .provider-form {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     max-width: 1000px;
@@ -13,13 +13,6 @@
     margin: 0 1rem;
   }
 
-  .provider-form > div:first-child  {
-    display: inline-block;
-    justify-self: center;
-    margin-bottom: 1rem;
-    padding: 0.5rem;
-  }
-
   .radio-label {
     margin-right: 1rem;
   }
@@ -27,17 +20,30 @@
   .provider-form > div:nth-child(1), div:nth-child(9), div:nth-child(14) {
     grid-column: span 2;
   }
+}
+.provider-form > div:first-child  {
+  display: inline-block;
+  justify-self: center;
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+}
+label {
+  margin-bottom: 0.5rem;
+}
 
+button {
+  justify-content: center;
+  margin: 1rem ;
+}
 
-  label {
-    margin-bottom: 0.5rem;
-  }
-  
-  button {
-    justify-content: center;
-    margin: 1rem ;
+.terms-label:hover {
+  cursor: pointer;
+}
+
+@media (max-width: 480px) {
+  .provider-form {
+    display: flex;
+    flex-direction: column;
   }
 
-  .terms-label:hover {
-    cursor: pointer;
-  }
+}
