--- a/src/styles/create-account.css
+++ b/src/styles/create-account.css
@@ -1,15 +1,28 @@
+@import '../index.css';
 
-
-    .create-form {
+ .create-form {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
     
     }
-    
     .select-type {
         display: flex;
         gap: 10px;
+        justify-content: center;
+    }
+
+    .select-type a {
+        padding: 1rem 2rem;
+        margin: 10px;
+        background-color: var(--button-color);
+        text-decoration: none;
+        color: white;
+        text-transform: uppercase;
+        font-weight: 500;
+        font-family: 'Raleway', sans-serif;
+        border-radius: 7px;
+
     }
 
