--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 
-/* @import url(https://fonts.googleapis.com/css?family=Raleway:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic); */
+@import url(https://fonts.googleapis.com/css?family=Raleway:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
 
 
 /*preset*/
@@ -79,100 +79,3 @@ p {
   display: flex;
   flex-direction: column;
 }
-
-/* Login & Signup */
-/* .logo-image {
-  width: 180px;
-  height: 60px;
- 
-} */
-
-/* .login-form, .create-account, .form-control, .form-group{
-  display: flex;
-  flex-direction: column;
-  
-}
-
-.login-form, .create-account {
-  max-width: 400px;
-  margin-left: 3rem;
-} */
-
-
-
-
-
-/* 
-.terms {
-  font-size: 0.5rem;
-  margin-bottom: 1rem;
-  margin-left: 1rem;
-}
-
-
-.error {
-  color:red;
-  font-size: 0.7rem;
-  font-weight: 600;
-} */
-
-/* Create account */
-
-/* .signup-form {
-  max-width: 400px;
-  margin: 2rem auto ;
-  display: flex;
-  flex-direction: column;
-  
-} */
-
-/* .user-signup {
-  width: 100%;
-}
-
-.create-account {
-  margin-top: 4rem;
-} */
- /* .create-profile {
- display: flex;
- gap: 1rem;
-} */
-
-/* .create-profile div {
-  border: 1px solid var(--button-color);
-  border-radius: 0.4rem;
-  padding: 0.5rem 2rem; 
-  margin-top: 0.2rem;
-  cursor: pointer;
-
-}
-
-.create-profile div:hover {
-  background-color: var(--hover);
-  color: var(--button-color);
-}
-
-#btn {
-width: 100%;
-}
-
-
-h2 {
-  font-size: 1.2rem;
-}
-h3 {
-  font-size: 0.7rem;
-   margin-bottom: 0.3rem;
-}
-
-h1 {
-  font-size: 0.6rem;
-  color: var(--sub-text);
-  font-weight: 500;
-  
-}
-
-img {
-  display: inline-block;
-}
- */
