--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,48 +1,24 @@
 @import '../index.css';
 
-.login {
+
+ .login {
     display: flex;
-    max-width: 1600px;
-    margin: 3rem;
-    gap: 100px;
-    justify-content: space-between;
-}
-
-#btn {
-    width: 60%;
-    align-self: center;
-}
-
-.login h3 {
-    margin: 0;
-    align-self: center;
-}
-.login h2 {
-    font-size: 2rem;
-}
+    margin: 2rem;
+    justify-content: center;
+    align-items: center;
+   
+ }
 .banner {
-    display: flex;
-    flex-direction: column;
-}
-
-.banner img {
-    width: 65%;
-    margin-top: -140px; 
-    margin-bottom: -100px;
-
-}
-
-.banner h1 {
-    font-size: 3rem;
+   display: none;
 }
 
 .login-form {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-    width: 50%;   
-    margin-top: 5rem;
-    
+    width: 80% ;
+}
+
+.title {
+    font-size: 3rem;
+    margin-bottom: 2rem;
 }
 
 p > .forgot-password {
@@ -51,6 +27,63 @@ p > .forgot-password {
     margin: 0.5rem auto;
 }
 
-.form-control {
-    margin-top: 1rem;
+.btn {
+    width: 100% !important;
+}
+
+
+@media(min-width: 550px) {
+    .login {
+        display: flex;
+        margin: 3rem; 
+        gap: 10%;
+    }
+    
+    .btn {
+        width: 60%;
+        align-self: center;
+    }
+    
+    .login h3 {
+        margin: 0;
+        align-self: center;
+    }
+    .login h2 {
+        font-size: 2rem;
+    }
+    .banner {
+        display: flex;
+        flex-direction: column;
+        width: 50%;
+       
+    }
+    
+    .banner img {
+        width: 100%;
+        margin-top: -130px; 
+        margin-bottom: -100px;
+    
+    }
+    
+    .banner h1 {
+        font-size: 3rem;
+    }
+    
+    .login-form {
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+        width: 50%;   
+        margin: 3rem;
+    }
+    
+    p > .forgot-password {
+        float: right;
+        font-weight: bold;
+        margin: 0.5rem auto;
+    }
+
+    .login h3 {
+        margin-top: 1rem;
+    }
 }
