--- a/src/styles/signup.css
+++ b/src/styles/signup.css
@@ -5,6 +5,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        margin-top: 4rem;
     
     }
     .select-type {
@@ -12,17 +13,17 @@
         gap: 10px;
         justify-content: center;
     }
-
+/* 
     .select-type a {
-        padding: 1rem 2rem;
+        padding: 0.7rem;
         margin: 10px;
         background-color: var(--button-color);
         text-decoration: none;
         color: white;
-        text-transform: uppercase;
+        text-transform: capitalize;
         font-weight: 500;
         font-family: 'Raleway', sans-serif;
         border-radius: 7px;
 
-    }
+    } */
 
