--- a/src/index.css
+++ b/src/index.css
@@ -1,94 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Raleway:100,200,300,regular,500,600,700,800,900,100italic,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
-
-/*preset*/
-
-* {
-  box-sizing: border-box;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-kerning: auto;
-}
-
-body,
-h1,
-h2,
-h3,
-h4,
-p {
-  margin: 0;
-  padding: 0;
-  font-family: "Raleway";
-}
-
-/* Typography */
-
-:root {
-  --placeholder-color: #ced3df;
-  --navbar: #fef7f2;
-  --button-color: #283593;
-  /* --button-color: #5732F9; */
-  --secondary-text: white;
-  --sub-text: rgb(131, 128, 128);
-  --hover: #dde2ee;
-  --logout: rgb(210, 91, 91);
-  font-family: "Raleway", sans-serif;
-}
-
-/* button styles */
-#btn {
-  text-transform: uppercase;
-  padding: 0.9rem 2rem;
-  border: none;
-  border-radius: 7px;
-  background-color: var(--button-color);
-  color: whitesmoke;
-  font-weight: bold;
-  font-size: 0.9rem;
-  cursor: pointer;
-  text-decoration: none;
-  max-width: 50%;
-}
-
-.logout {
-  background-color: var(--logout-buttton);
-}
-
-input,
-select {
-  font-size: 1rem;
-  padding: 0.8rem 1rem 0.6rem 0.6rem;
-  border: 2px solid var(--placeholder-color);
-  border-radius: 0.25rem;
-  text-align: left;
-  margin-bottom: 0.2rem;
-}
-h1 {
-  font-size: 1.5rem;
-  font-weight: 600;
-}
-h2 {
-  font-size: 1.2rem;
-}
-
-/* tags with links*/
-h3 {
-  font-size: 0.9rem;
-  margin-top: 0.8rem;
-}
-
-h4 {
-  font-size: 0.9rem;
-  font-weight: 500;
-  margin: 0.5rem 0;
-}
-
-p {
-  font-size: 0.8rem;
-}
-
-/* login-form, signup-form, create-account */
-.form-control {
-  display: flex;
-  flex-direction: column;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
