--- a/Interview1/src/App.css
+++ b/Interview1/src/App.css
@@ -66,33 +66,16 @@ input {
 .manager-home {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .folder {
-  display: flex;
-  gap: 10px;
-  justify-content: center;
-  align-items: center;
-
-  background-color: aliceblue;
-  color: darkblue;
-}
-
-.subfolder {
-  background-color: goldenrod;
-  color: black;
   padding-left: 20px;
-
-  display: flex;
-  gap: 10px;
-  justify-content: center;
-  align-items: center;
 }
 
 .files {
-  background-color: bisque;
-  color: darkturquoise;
-  padding: 20px;
+  padding-left: 20px;
 }
 
 /* trello board */
