--- a/Interview1/src/components/Pagination/pagination.css
+++ b/Interview1/src/components/Pagination/pagination.css
@@ -6,13 +6,14 @@
 }
 
 .root {
-  background-color: aliceblue;
   min-height: 100vh;
   width: 100%;
 }
 
 .products {
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
   padding: 10px 20px;
 }
@@ -20,6 +21,7 @@
 .product-desc {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   gap: 20px;
   margin: 20px;
