--- a/Interview1/src/App.css
+++ b/Interview1/src/App.css
@@ -121,3 +121,19 @@ p {
 li {
   list-style: none;
 }
+
+
+/* progress bar */
+.container-outer {
+  border: 1px solid white;
+  border-radius: 50px;
+  overflow: hidden;
+
+}
+
+.inner {
+  background-color: lightcoral;
+  color: #000;
+  text-align: right;
+  transition: 0.5s ease-in;
+}
