--- a/Interview1/src/App.css
+++ b/Interview1/src/App.css
@@ -1,4 +1,8 @@
-#root {
+.App {
+  width: 100%;
+  height: 100%;
+}
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -32,7 +36,7 @@
 .user-input {
   display: flex;
   gap: 10px;
-}
+} */
 
 input {
   padding: 10px;
@@ -137,21 +141,76 @@ li {
 }
 
 /* Todo */
-.todo {
-  background-color: aquamarine;
-  width: 90%;
-  height: 500px;
+.main-todo {
+  background-color: rgb(25, 19, 19);
+  color: white;
+  width: 100%;
+  height: 100%;
+}
+
+.main-todo.light {
+  background-color: rgb(155, 144, 144);
   color: black;
+}
+
+.todo {
+  background-color: rgb(9, 9, 22);
+  width: 90%;
+  height: 300px;
+  max-height: 900px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+.todo.light {
+  background-color: rgb(248, 204, 204);
+  color: black;
+}
+.theme-btn {
+  width: 15%;
+  background-color: white;
+  margin-left: auto;
+}
+
+.theme-btn.light {
+  background-color: #3d1f1f;
+  color: white;
+}
+.form-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: center;
+  background-color: rgb(9, 9, 22);
+}
+.form-container.light {
+  background-color: rgb(249, 243, 235);
+  color: black;
+}
+label {
+  font-size: 1.5rem;
+}
+
+input {
+  border: none;
 }
 .tasks-container {
   display: flex;
+  color: white;
   flex-direction: column;
   gap: 10px;
-  background-color: palegoldenrod;
-  color: #000;
+  background-color: rgb(31, 31, 68);
   overflow-y: auto;
   scroll-behavior: smooth;
   max-height: 300px;
+}
+
+.todo-btn {
+  background-color: whitesmoke;
+  color: black;
+  margin: auto;
 }
 
 /* file manager */
